styling and adding a hrefs

--- a/code.html
+++ b/code.html
@@ -12,46 +12,47 @@
   <!-- Le Styles -->
   <link href='stylesheets/all.css' rel='stylesheet'>
   <link href='http://fonts.googleapis.com/css?family=News+Cycle|Cousine' rel='stylesheet'>
-  <!-- All JavaScript at the bottom, except this Modernizr build. -->
-  <script src='assets/js/libs/modernizr-2.5.3.min.js'></script>
 </head>
-<div class='header'>
-  <nav>
-    <h1>Thomas Berry</h1>
+<body>
+  <div class='header'>
+    <nav>
+      <h1>Thomas Berry</h1>
+      <ul>
+        <li>
+          <a class='fade' href='index.html'>Home</a>
+        </li>
+        <li>
+          <a class='fade' href='code.html'>Code</a>
+        </li>
+        <li>
+          <a class='fade' href='about.html'>About Me</a>
+        </li>
+      </ul>
+    </nav>
+  </div>
+  <div class='wrap'>
+    <div class='main'>
+      <h2 class='header-title'>
+        Code
+      </h2>
+      <p class='full'>
+        Lorem ipsum dolor sit amet, consectetur adipisicing elit. Sed, doloribus, nam, dolorum omnis dolores neque voluptatibus inventore aperiam minima iure error quaerat ipsum necessitatibus iste natus mollitia nihil a deserunt.
+      </p>
+    </div>
+  </div>
+  <div class='footer'>
+    <h2>Connect</h2>
     <ul>
       <li>
-        <a class='fade' href='index.html'>Home</a>
+        <a class='fade' href='mailto:thom.berry@gmail.com'>Email</a>
       </li>
       <li>
-        <a class='fade' href='code.html'>Code</a>
+        <a class='fade' href='http://www.twitter.com/thomasreidberry'>Twitter</a>
       </li>
       <li>
-        <a class='fade' href='about.html'>About Me</a>
+        <a class='fade' href='http://www.github.com/switchflip'>Github</a>
       </li>
     </ul>
-  </nav>
-</div>
-<div class='wrap'>
-  <div class='main'>
-    <h2 class='header-title'>
-      Code
-    </h2>
-    <p class='full'>
-      Lorem ipsum dolor sit amet, consectetur adipisicing elit. Sed, doloribus, nam, dolorum omnis dolores neque voluptatibus inventore aperiam minima iure error quaerat ipsum necessitatibus iste natus mollitia nihil a deserunt.
-    </p>
   </div>
-</div>
-<div class='footer'>
-  <h2>Connect</h2>
-  <ul>
-    <li>
-      <a class='fade' href='http://www.twitter.com/thomasreidberry'>Twitter</a>
-    </li>
-    <li>
-      <a class='fade' href='#'>Instagram</a>
-    </li>
-    <li>
-      <a class='fade' href='http://www.github.com/switchflip'>Github</a>
-    </li>
-  </ul>
-</div>
+  <script rel='text/javascript' src='javascripts/all.js'></script>
+</body>
