--- a/index.html
+++ b/index.html
@@ -12,63 +12,76 @@
   <!-- Le Styles -->
   <link href='stylesheets/all.css' rel='stylesheet'>
   <link href='http://fonts.googleapis.com/css?family=News+Cycle|Cousine' rel='stylesheet'>
-  <!-- All JavaScript at the bottom, except this Modernizr build. -->
-  <script src='assets/js/libs/modernizr-2.5.3.min.js'></script>
 </head>
-<div class='header'>
-  <nav>
-    <h1>Thomas Berry</h1>
-    <ul>
-      <li>
-        <a class='fade' href='index.html'>Home</a>
-      </li>
-      <li>
-        <a class='fade' href='code.html'>Code</a>
-      </li>
-      <li>
-        <a class='fade' href='about.html'>About Me</a>
-      </li>
-    </ul>
-  </nav>
-</div>
-<div class='wrap'>
-  <div class='main'>
-    <div class='marketing'>
-      <div class='bang'>
-        <h2 class='large'>I make websites. Front and back-end.</h2>
+<body>
+  <div class='header'>
+    <nav>
+      <h1>Thomas Berry</h1>
+      <ul>
+        <li>
+          <a class='fade' href='index.html'>Home</a>
+        </li>
+        <li>
+          <a class='fade' href='code.html'>Code</a>
+        </li>
+        <li>
+          <a class='fade' href='about.html'>About Me</a>
+        </li>
+      </ul>
+    </nav>
+  </div>
+  <div class='wrap'>
+    <div class='main'>
+      <div class='marketing'>
+        <div class='bang'>
+          <h2 class='large'>I make websites. Front and back-end.</h2>
+        </div>
+      </div>
+      <div class='third'>
+        <a href='code.html'>
+          <img src='images/work.png'>
+        </a>
+        <a href='code.html'>
+          <h2>Work</h2>
+        </a>
+        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Labore, ad, omnis, earum a amet ex enim repellendus id atque accusantium odit est cumque dolorem blanditiis corporis inventore accusamus quaerat repellat.</p>
+        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Labore, ad, omnis, earum a amet ex enim repellendus id atque accusantium odit est cumque dolorem blanditiis corporis inventore accusamus quaerat repellat.</p>
+      </div>
+      <div class='third'>
+        <a href='code.html'>
+          <img alt='code icon' src='images/code.png'>
+        </a>
+        <a href='code.html'>
+          <h2>Code</h2>
+        </a>
+        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Labore, ad, omnis, earum a amet ex enim repellendus id atque accusantium odit est cumque dolorem blanditiis corporis inventore accusamus quaerat repellat.</p>
+        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Labore, ad, omnis, earum a amet ex enim repellendus id atque accusantium odit est cumque dolorem blanditiis corporis inventore accusamus quaerat repellat.</p>
+      </div>
+      <div class='third'>
+        <a href='about.html'>
+          <img src='images/activities.png'>
+        </a>
+        <a href='about.html'>
+          <h2>About Me</h2>
+        </a>
+        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Labore, ad, omnis, earum a amet ex enim repellendus id atque accusantium odit est cumque dolorem blanditiis corporis inventore accusamus quaerat repellat.</p>
+        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Labore, ad, omnis, earum a amet ex enim repellendus id atque accusantium odit est cumque dolorem blanditiis corporis inventore accusamus quaerat repellat.</p>
       </div>
     </div>
-    <div class='third'>
-      <img src='images/work.png'>
-      <h2>Work</h2>
-      <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Labore, ad, omnis, earum a amet ex enim repellendus id atque accusantium odit est cumque dolorem blanditiis corporis inventore accusamus quaerat repellat.</p>
-      <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Labore, ad, omnis, earum a amet ex enim repellendus id atque accusantium odit est cumque dolorem blanditiis corporis inventore accusamus quaerat repellat.</p>
-    </div>
-    <div class='third'>
-      <img src='images/code.png'>
-      <h2>Code</h2>
-      <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Labore, ad, omnis, earum a amet ex enim repellendus id atque accusantium odit est cumque dolorem blanditiis corporis inventore accusamus quaerat repellat.</p>
-      <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Labore, ad, omnis, earum a amet ex enim repellendus id atque accusantium odit est cumque dolorem blanditiis corporis inventore accusamus quaerat repellat.</p>
-    </div>
-    <div class='third'>
-      <img src='images/activities.png'>
-      <h2>About Me</h2>
-      <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Labore, ad, omnis, earum a amet ex enim repellendus id atque accusantium odit est cumque dolorem blanditiis corporis inventore accusamus quaerat repellat.</p>
-      <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Labore, ad, omnis, earum a amet ex enim repellendus id atque accusantium odit est cumque dolorem blanditiis corporis inventore accusamus quaerat repellat.</p>
-    </div>
   </div>
-</div>
-<div class='footer'>
-  <h2>Connect</h2>
-  <ul>
-    <li>
-      <a class='fade' href='http://www.twitter.com/thomasreidberry'>Twitter</a>
-    </li>
-    <li>
-      <a class='fade' href='#'>Instagram</a>
-    </li>
-    <li>
-      <a class='fade' href='http://www.github.com/switchflip'>Github</a>
-    </li>
-  </ul>
-</div>
+  <div class='footer'>
+    <h2>Connect</h2>
+    <ul>
+      <li>
+        <a class='fade' href='mailto:thom.berry@gmail.com'>Email</a>
+      </li>
+      <li>
+        <a class='fade' href='http://www.twitter.com/thomasreidberry'>Twitter</a>
+      </li>
+      <li>
+        <a class='fade' href='http://www.github.com/switchflip'>Github</a>
+      </li>
+    </ul>
+  </div>
+  <script rel='text/javascript' src='javascripts/all.js'></script>
+</body>
