added form and form styles updated mediaqueries

--- a/about.html
+++ b/about.html
@@ -11,12 +11,14 @@
   <title>Thomas Berry</title>
   <!-- Le Styles -->
   <link href='stylesheets/all.css' rel='stylesheet'>
-  <link href='http://fonts.googleapis.com/css?family=News+Cycle|Cousine' rel='stylesheet'>
+  <link href='http://fonts.googleapis.com/css?family=News+Cycle|Roboto' rel='stylesheet'>
 </head>
 <body>
   <div class='header'>
     <nav>
-      <h1>Thomas Berry</h1>
+      <a href='index.html'>
+        <h1>Thomas Berry</h1>
+      </a>
       <ul>
         <li>
           <a class='fade' href='index.html'>Home</a>
@@ -32,9 +34,19 @@
   </div>
   <div class='wrap'>
     <div class='main'>
-      <h2 class='header-title'>About me</h2>
+      <h2 class='header-margin'>About me</h2>
       <p class='full'>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Aspernatur, quasi, pariatur, cum amet commodi quas necessitatibus harum delectus unde asperiores fugiat ipsum fugit praesentium facere natus nobis deleniti doloremque laboriosam!</p>
       <p class='full'>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Aspernatur, quasi, pariatur, cum amet commodi quas necessitatibus harum delectus unde asperiores fugiat ipsum fugit praesentium facere natus nobis deleniti doloremque laboriosam! Lorem ipsum dolor sit amet, consectetur adipisicing elit. Quod, esse, omnis repudiandae aliquam vero reprehenderit ex voluptas totam beatae amet nam quis suscipit veniam exercitationem consequuntur eum assumenda nihil non!</p>
+      <div class='contact'>
+        <h2 class='header-margin'>Contact Me</h2>
+        <p class='full'>If you'd like to get a hold of me to discuss work opportunities or anything else. Feel free to send me a message.</p>
+        <form>
+          <input class='name' placeholder='Name' required type='text'>
+          <input class='email' placeholder='Email' required type='text'>
+          <textarea class='message' placeholder='Comments' required></textarea>
+          <input class='button' type='submit' value='Send'>
+        </form>
+      </div>
     </div>
   </div>
   <div class='footer'>
@@ -48,6 +60,9 @@
       </li>
       <li>
         <a class='fade' href='http://www.github.com/switchflip'>Github</a>
+      </li>
+      <li>
+        <a class='fade' href='#'>Blog</a>
       </li>
     </ul>
   </div>
