--- a/code.html
+++ b/code.html
@@ -11,12 +11,14 @@
   <title>Thomas Berry</title>
   <!-- Le Styles -->
   <link href='stylesheets/all.css' rel='stylesheet'>
-  <link href='http://fonts.googleapis.com/css?family=News+Cycle|Cousine' rel='stylesheet'>
+  <link href='http://fonts.googleapis.com/css?family=News+Cycle|Roboto' rel='stylesheet'>
 </head>
 <body>
   <div class='header'>
     <nav>
-      <h1>Thomas Berry</h1>
+      <a href='index.html'>
+        <h1>Thomas Berry</h1>
+      </a>
       <ul>
         <li>
           <a class='fade' href='index.html'>Home</a>
@@ -51,6 +53,9 @@
       </li>
       <li>
         <a class='fade' href='http://www.github.com/switchflip'>Github</a>
+      </li>
+      <li>
+        <a class='fade' href='#'>Blog</a>
       </li>
     </ul>
   </div>
