--- a/index.html
+++ b/index.html
@@ -11,12 +11,14 @@
   <title>Thomas Berry</title>
   <!-- Le Styles -->
   <link href='stylesheets/all.css' rel='stylesheet'>
-  <link href='http://fonts.googleapis.com/css?family=News+Cycle|Cousine' rel='stylesheet'>
+  <link href='http://fonts.googleapis.com/css?family=News+Cycle|Roboto' rel='stylesheet'>
 </head>
 <body>
   <div class='header'>
     <nav>
-      <h1>Thomas Berry</h1>
+      <a href='index.html'>
+        <h1>Thomas Berry</h1>
+      </a>
       <ul>
         <li>
           <a class='fade' href='index.html'>Home</a>
@@ -32,11 +34,6 @@
   </div>
   <div class='wrap'>
     <div class='main'>
-      <div class='marketing'>
-        <div class='bang'>
-          <h2 class='large'>I make websites. Front and back-end.</h2>
-        </div>
-      </div>
       <div class='third'>
         <a href='code.html'>
           <img src='images/work.png'>
@@ -80,6 +77,9 @@
       </li>
       <li>
         <a class='fade' href='http://www.github.com/switchflip'>Github</a>
+      </li>
+      <li>
+        <a class='fade' href='#'>Blog</a>
       </li>
     </ul>
   </div>
