--- a/code.html
+++ b/code.html
@@ -11,7 +11,7 @@
   <title>Thomas Berry</title>
   <!-- Le Styles -->
   <link href='stylesheets/all.css' rel='stylesheet'>
-  <link href='http://fonts.googleapis.com/css?family=News+Cycle|Roboto' rel='stylesheet'>
+  <link href='http://fonts.googleapis.com/css?family=Arvo|Cabin|Bree+Serif' rel='stylesheet'>
 </head>
 <body>
   <div class='header'>
@@ -34,7 +34,7 @@
   </div>
   <div class='wrap'>
     <div class='main'>
-      <h2 class='header-title'>
+      <h2 class='header-margin'>
         Code
       </h2>
       <p class='full'>
