--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
   <title>Thomas Berry</title>
   <!-- Le Styles -->
   <link href='stylesheets/all.css' rel='stylesheet'>
-  <link href='http://fonts.googleapis.com/css?family=News+Cycle|Roboto' rel='stylesheet'>
+  <link href='http://fonts.googleapis.com/css?family=Arvo|Cabin|Bree+Serif' rel='stylesheet'>
 </head>
 <body>
   <div class='header'>
