New styles, added images, changed header/footer colors

--- a/about.html
+++ b/about.html
@@ -35,8 +35,13 @@
   <div class='wrap'>
     <div class='main'>
       <h2 class='header-margin'>About me</h2>
-      <p class='full'>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Aspernatur, quasi, pariatur, cum amet commodi quas necessitatibus harum delectus unde asperiores fugiat ipsum fugit praesentium facere natus nobis deleniti doloremque laboriosam!</p>
-      <p class='full'>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Aspernatur, quasi, pariatur, cum amet commodi quas necessitatibus harum delectus unde asperiores fugiat ipsum fugit praesentium facere natus nobis deleniti doloremque laboriosam! Lorem ipsum dolor sit amet, consectetur adipisicing elit. Quod, esse, omnis repudiandae aliquam vero reprehenderit ex voluptas totam beatae amet nam quis suscipit veniam exercitationem consequuntur eum assumenda nihil non!</p>
+      <p class='full'>I am a 29 year old developer from Toronto, Ontario. I am experienced with writing html/haml and css/sass. I have experience applying the latest of css3 and html5 to production sites. Furthermore I have experience writing ruby and javascript. And have created numerous rails apps.</p>
+      <p class='full'>Aside from coding I have a master degree from the University of Toronto in the field of information science and a bachelor of arts degree in history and geography. Although on a day to day basic the content of what I learned does not apply to web app develop, I believe my ability to think and solve problems in a creative manner is the most important skill I learned while school.</p>
+      <figure>
+        <div class='polaroid'>
+          <img src='images/thomas-berry-profile.jpg'>
+        </div>
+      </figure>
       <div class='contact'>
         <h2 class='header-margin'>Contact Me</h2>
         <p class='full'>If you'd like to get a hold of me to discuss work opportunities or anything else. Feel free to send me a message.</p>
