added content and .two class

--- a/about.html
+++ b/about.html
@@ -36,8 +36,7 @@
     <div class='main'>
       <h2 class='header-margin'>About me</h2>
       <p class='full'>I am a 29 year old developer from Toronto, Ontario. I am experienced with writing html/haml and css/sass. I have experience applying the latest of css3 and html5 to production sites. Furthermore I have experience writing ruby, javascript/jquery and other javascript frameworks. I also have experience building web application with ruby-on-rails.</p>
-      <p class='full'>Aside from coding I have a masters degree from the University of Toronto in the field of information science and a bachelor of arts degree in history and geography. My unique mix of skills makes me extremely valuable to any team. I</p>
-      <p class='full'></p>
+      <p class='full'>Aside from coding I have a masters degree from the University of Toronto in the field of information science and a bachelor of arts degree in history and geography. My unique mix of skills makes me extremely valuable to any team.</p>
       <figure>
         <div class='polaroid'>
           <img alt='A image of me, Thomas Berry' class='one-edge-shadow round-all' src='images/thomas-berry-profile.jpg'>
