--- a/code.html
+++ b/code.html
@@ -34,12 +34,32 @@
   </div>
   <div class='wrap'>
     <div class='main'>
-      <h2 class='header-margin'>
-        Code
-      </h2>
-      <p class='full'>
-        Lorem ipsum dolor sit amet, consectetur adipisicing elit. Sed, doloribus, nam, dolorum omnis dolores neque voluptatibus inventore aperiam minima iure error quaerat ipsum necessitatibus iste natus mollitia nihil a deserunt.
-      </p>
+      <div class='full'>
+        <h2 class='header-margin'>Code</h2>
+        <p class='full'>
+          Most of the work I do is front-end web developer in my current job as a developer for the Toronto Public Library. But, I hope to transition to a full stack developer in the near future.
+        </p>
+      </div>
+      <div class='row'>
+        <div class='two'>
+          <h3>Ruby and Rails</h3>
+          <p>In the spring of 2012 after coding for a few years I decided it was time to get serious and I began a 3 month intensive bootcamp focused on programming in ruby and ruby-on-rails. It was one of the most intense experiences of my life, but I am forever thankful I attended. It greatly accerated my learing.</p>
+        </div>
+        <div class='two'>
+          <h3>Javascript/Jquery</h3>
+          <p>Personally I believe the future of the web (for now anyways) is javascript. I could on with reasons as to why, but in the last few months I have joined a nerdy code club with some other developer in Toronto with the sole purpose of mastering javascript.</p>
+        </div>
+      </div>
+      <div class='row'>
+        <div class='two'>
+          <h3>Haml/Sass</h3>
+          <p>For 3 years I've been writing html and more recently I've started building almost everything with haml (Yeah Haml!). Also, I am extremely skilled and efficient writing CSS and Sass (I prefer Sass for it's organization and breivity).</p>
+        </div>
+        <div class='two'>
+          <h3>Etc...</h3>
+          <p>As far as version control goes profesionally I use SVN, but for my own personal projects I rely on git/github. I am speedy in the terminal and have an understanding of MySql and the thoery of relational databases.</p>
+        </div>
+      </div>
     </div>
   </div>
   <div class='footer'>
