added more styles to .two

--- a/about.html
+++ b/about.html
@@ -45,7 +45,7 @@
       <div class='contact'>
         <h2 class='header-margin'>Contact Me</h2>
         <p class='full'>If you'd like to get a hold of me to discuss work opportunities or anything else. Feel free to send me a message.</p>
-        <form>
+        <form method='post'>
           <input class='name' placeholder='Name' required type='text'>
           <input class='email' placeholder='Email' required type='text'>
           <textarea class='message' placeholder='Comments' required></textarea>
