got form working, adjusted styles

--- a/code.html
+++ b/code.html
@@ -6,7 +6,7 @@
 <head>
   <meta charset='utf-8'>
   <meta content='IE=edge,chrome=1' http-equiv='X-UA-Compatible'>
-  <meta content='' name='description'>
+  <meta content='Thomas Berry, Web Developer, Toronto, Canada' name='description'>
   <meta content='width=device-width' name='viewport'>
   <title>Thomas Berry</title>
   <!-- Le Styles -->
@@ -21,6 +21,7 @@
       </a>
       <ul>
         <li>
+          <!-- %img{:src => 'images/icons/profle.png'} -->
           <a class='fade' href='index.html'>Home</a>
         </li>
         <li>
@@ -43,7 +44,7 @@
       <div class='row'>
         <div class='two'>
           <img alt='Ruby on Rails icon' class='center-img' src='images/icons/rocket.png'>
-          <h3>Ruby and Rails</h3>
+          <h3>Ruby on Rails</h3>
           <p>In the spring of 2012 after coding for a few years I decided it was time to get serious and I began a 3 month intensive bootcamp focused on programming in ruby and ruby-on-rails. It was one of the most intense experiences of my life, but I am forever thankful I attended. It greatly accerated my learing.</p>
         </div>
         <div class='two'>
