--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 <head>
   <meta charset='utf-8'>
   <meta content='IE=edge,chrome=1' http-equiv='X-UA-Compatible'>
-  <meta content='' name='description'>
+  <meta content='Thomas Berry, Web Developer, Toronto, Canada' name='description'>
   <meta content='width=device-width' name='viewport'>
   <title>Thomas Berry</title>
   <!-- Le Styles -->
@@ -21,6 +21,7 @@
       </a>
       <ul>
         <li>
+          <!-- %img{:src => 'images/icons/profle.png'} -->
           <a class='fade' href='index.html'>Home</a>
         </li>
         <li>
