--- a/about.html
+++ b/about.html
@@ -6,7 +6,7 @@
 <head>
   <meta charset='utf-8'>
   <meta content='IE=edge,chrome=1' http-equiv='X-UA-Compatible'>
-  <meta content='' name='description'>
+  <meta content='Thomas Berry, Web Developer, Toronto, Canada' name='description'>
   <meta content='width=device-width' name='viewport'>
   <title>Thomas Berry</title>
   <!-- Le Styles -->
@@ -21,6 +21,7 @@
       </a>
       <ul>
         <li>
+          <!-- %img{:src => 'images/icons/profle.png'} -->
           <a class='fade' href='index.html'>Home</a>
         </li>
         <li>
@@ -36,7 +37,8 @@
     <div class='main'>
       <h2 class='header-margin'>About me</h2>
       <p class='full'>I am a 29 year old developer from Toronto, Ontario. I am experienced with writing html/haml and css/sass. I have experience applying the latest of css3 and html5 to production sites. Furthermore I have experience writing ruby, javascript/jquery and other javascript frameworks. I also have experience building web application with ruby-on-rails.</p>
-      <p class='full'>Aside from coding I have a masters degree from the University of Toronto in the field of information science and a bachelor of arts degree in history and geography. My unique mix of skills makes me extremely valuable to any team.</p>
+      <p class='full'>Aside from coding I have a masters degree from the University of Toronto in the field of information science and a bachelor of arts degree in history and geography. Before getting into web development professionally, I worked as a public services reference librarian for the Toronto Public Library.</p>
+      <p class='full'>I believe my experience working on the front-line and developing for the Toronto Public Library has allowed for a unique prespective on how to build web applications that users want.</p>
       <figure>
         <div class='polaroid'>
           <img alt='A image of me, Thomas Berry' class='one-edge-shadow round-all' src='images/thomas-berry-profile.jpg'>
@@ -45,11 +47,21 @@
       <div class='contact'>
         <h2 class='header-margin'>Contact Me</h2>
         <p class='full'>If you'd like to get a hold of me to discuss work opportunities or anything else. Feel free to send me a message.</p>
-        <form method='post'>
-          <input class='name' placeholder='Name' required type='text'>
-          <input class='email' placeholder='Email' required type='text'>
-          <textarea class='message' placeholder='Comments' required></textarea>
-          <input class='button' type='submit' value='Send'>
+        <!-- %form{:method => 'post'} -->
+        <!-- %input.name{:type => 'text', :placeholder => 'Name', :required => true} -->
+        <!-- %input.email{:type => 'text', :placeholder => 'Email', :required => true} -->
+        <!-- %textarea.message{:placeholder => 'Comments', :required => true} -->
+        <!-- %input.button{:type => "submit", :value => "Send", :class => "button"} -->
+        <form action='https://switchflip.wufoo.com/forms/mw1cf720g5zq8q/#public' autocomplete='off' class='wufoo topLabel page' enctype='multipart/form-data' id='form2' method='post' name='form2' novalidate=''>
+          <input class='name' name='Field1' onkeyup='' placeholder='Name' type='text'>
+          <input class='email' name='Field2' placeholder='Email' spellcheck='false' type='email' value=''>
+          <textarea class='message' name='Field3' onkeyup='' placeholder='Comments' spellcheck='true'></textarea>
+          <input class='btTxt submit button' id='saveForm' name='saveForm' type='submit' value='Submit'>
+          <div class='li hide'>
+            <label for='comment'>Do Not Fill This Out</label>
+            <textarea cols='1' id='comment' name='comment' rows='1'></textarea>
+            <input id='idstamp' name='idstamp' type='hidden' value='tT9obkj/pe+WX5AN7s8SpTsBq8FiAJ5EewmZwxdXbcU='>
+          </div>
         </form>
       </div>
     </div>
