added jquery active code

--- a/about.html
+++ b/about.html
@@ -22,13 +22,13 @@
       <ul>
         <li>
           <!-- %img{:src => 'images/icons/profle.png'} -->
-          <a class='fade' href='index.html'>Home</a>
+          <a class='fade index' href='index.html'>Home</a>
         </li>
         <li>
-          <a class='fade' href='code.html'>Code</a>
+          <a class='fade code' href='code.html'>Code</a>
         </li>
         <li>
-          <a class='fade' href='about.html'>About Me</a>
+          <a class='fade about' href='about.html'>About Me</a>
         </li>
       </ul>
     </nav>
