--- a/index.html
+++ b/index.html
@@ -21,7 +21,6 @@
       </a>
       <ul>
         <li>
-          <!-- %img{:src => 'images/icons/profle.png'} -->
           <a class='fade index' href='index.html'>Home</a>
         </li>
         <li>
@@ -88,7 +87,7 @@
         <a class='fade' href='http://www.github.com/switchflip'>Github</a>
       </li>
       <li>
-        <a class='fade' href='#'>Blog</a>
+        <a class='fade' href='http://www.thomasreidberry.tumblr.com'>Blog</a>
       </li>
     </ul>
   </div>
