--- a/code.html
+++ b/code.html
@@ -21,7 +21,6 @@
       </a>
       <ul>
         <li>
-          <!-- %img{:src => 'images/icons/profle.png'} -->
           <a class='fade index' href='index.html'>Home</a>
         </li>
         <li>
@@ -45,12 +44,12 @@
         <div class='two'>
           <img alt='Ruby on Rails icon' class='center-img' src='images/icons/rocket.png'>
           <h3>Ruby on Rails</h3>
-          <p>In the spring of 2012 after coding for a few years I decided it was time to get serious and I began a 3 month intensive bootcamp focused on programming in ruby and ruby-on-rails. It was one of the most intense experiences of my life, but I am forever thankful I attended. It greatly accerated my learing.</p>
+          <p>In the spring of 2012 after coding for a few years I decided it was time to get serious and I began a 3 month intensive bootcamp focused on programming in ruby and ruby-on-rails. It was one of the most intense experiences of my life, but I am forever thankful I attended.</p>
         </div>
         <div class='two'>
           <img alt='Javascript icon' class='center-img' src='images/icons/magicwand.png'>
           <h3>Javascript/Jquery</h3>
-          <p>Personally I believe the future of the web (for now anyways) is javascript. I could on with reasons as to why, but in the last few months I have joined a nerdy code club with some other developer in Toronto with the sole purpose of mastering javascript.</p>
+          <p>Personally I believe the future of the web (for now anyways) is javascript. I could go on with reasons as to why, but in the last few months I have joined a nerdy code club with some other developers in Toronto with the sole purpose of mastering the infamous javascript(s).</p>
         </div>
       </div>
       <div class='row'>
@@ -80,7 +79,7 @@
         <a class='fade' href='http://www.github.com/switchflip'>Github</a>
       </li>
       <li>
-        <a class='fade' href='#'>Blog</a>
+        <a class='fade' href='http://www.thomasreidberry.tumblr.com'>Blog</a>
       </li>
     </ul>
   </div>
