changed jquery instagram plugin added styles

--- a/about.html
+++ b/about.html
@@ -43,13 +43,11 @@
           <img alt='A image of me, Thomas Berry' class='one-edge-shadow round-all' src='images/thomas-berry-profile.jpg'>
         </div>
       </figure>
-      <div class='insta'>
+      <div class='row'>
         <a href='http://www.instagram.com/brofairy'>
           <h2 class='header-margin'>@brofairy</h2>
-          <ul id='instagram'>
-            <li></li>
-          </ul>
         </a>
+        <div id='instafeed'></div>
       </div>
       <div class='contact clearfix'>
         <h2 class='header-margin'>Contact Me</h2>
