--- a/about.html
+++ b/about.html
@@ -29,6 +29,9 @@
         <li>
           <a class='fade about' href='about.html'>About Me</a>
         </li>
+        <li>
+          <a class='fade resume' href='about.html'>Resume</a>
+        </li>
       </ul>
     </nav>
   </div>
@@ -43,12 +46,11 @@
           <img alt='A image of me, Thomas Berry' class='one-edge-shadow round-all' src='images/thomas-berry-profile.jpg'>
         </div>
       </figure>
-      <div class='row'>
-        <a href='http://www.instagram.com/brofairy'>
-          <h2 class='header-margin'>@brofairy</h2>
-        </a>
-        <div id='instafeed'></div>
-      </div>
+      <a href='http://www.instagram.com/brofairy'>
+        <h2 class='header-margin'>@brofairy</h2>
+        <p class='full'>I like taking dumb photos on instagram. Using data. Spending monies. Check them out if you want.</p>
+      </a>
+      <div id='instafeed'></div>
       <div class='contact clearfix'>
         <h2 class='header-margin'>Contact Me</h2>
         <p class='full'>If you'd like to get a hold of me to discuss work opportunities or anything else. Feel free to send me a message.</p>
