--- a/code.html
+++ b/code.html
@@ -29,6 +29,9 @@
         <li>
           <a class='fade about' href='about.html'>About Me</a>
         </li>
+        <li>
+          <a class='fade resume' href='about.html'>Resume</a>
+        </li>
       </ul>
     </nav>
   </div>
