fixed instagram js and added resume

--- a/about.html
+++ b/about.html
@@ -30,7 +30,7 @@
           <a class='fade about' href='about.html'>About Me</a>
         </li>
         <li>
-          <a class='fade resume' href='about.html'>Resume</a>
+          <a class='fade resume' href='resume.html'>Resume</a>
         </li>
       </ul>
     </nav>
