building out content for resume

--- a/about.html
+++ b/about.html
@@ -3,87 +3,89 @@
 <!--[if IE 7]> <html class="no-js lt-ie9 lt-ie8" lang="en"> <![endif]-->
 <!--[if IE 8]> <html class="no-js lt-ie9" lang="en"> <![endif]-->
 <!--[if gt IE 8]> <html class="no-js" lang="en"> <![endif]-->
-<head>
-  <meta charset='utf-8'>
-  <meta content='IE=edge,chrome=1' http-equiv='X-UA-Compatible'>
-  <meta content='Thomas Berry, Web Developer, Toronto, Canada' name='description'>
-  <meta content='width=device-width' name='viewport'>
-  <title>Thomas Berry</title>
-  <!-- Le Styles -->
-  <link href='stylesheets/all.css' rel='stylesheet'>
-  <link href='http://fonts.googleapis.com/css?family=Arvo|Cabin|Bree+Serif' rel='stylesheet'>
-</head>
-<body>
-  <div class='header'>
-    <nav>
-      <a href='index.html'>
-        <h1>Thomas Berry</h1>
-      </a>
-      <ul>
-        <li>
-          <a class='fade index' href='index.html'>Home</a>
-        </li>
-        <li>
-          <a class='fade code' href='code.html'>Code</a>
-        </li>
-        <li>
-          <a class='fade about' href='about.html'>About Me</a>
-        </li>
-        <li>
-          <a class='fade resume' href='resume.html'>Resume</a>
-        </li>
-      </ul>
-    </nav>
-  </div>
-  <div class='wrap'>
-    <div class='main'>
-      <h2 class='header-margin'>About me</h2>
-      <p class='full'>I am a 29 year old developer from Toronto, Ontario. I am experienced with writing html/haml and css/sass. I have experience applying the latest of css3 and html5 to production sites. Furthermore I have experience writing ruby, javascript/jquery and other javascript frameworks. I also have experience building web application with ruby-on-rails.</p>
-      <p class='full'>Aside from coding I have a masters degree from the University of Toronto in the field of information science and a bachelor of arts degree in history and geography. Before getting into web development professionally, I worked as a public services reference librarian for the Toronto Public Library.</p>
-      <p class='full'>I believe my experience working on the front-line and developing for the Toronto Public Library has allowed for a unique prespective on how to build web applications that users want.</p>
-      <figure>
-        <div class='polaroid'>
-          <img alt='A image of me, Thomas Berry' class='one-edge-shadow round-all' src='images/thomas-berry-profile.jpg'>
-        </div>
-      </figure>
-      <a href='http://www.instagram.com/brofairy'>
-        <h2 class='header-margin'>@brofairy</h2>
-        <p class='full'>I like taking dumb photos on instagram. Using data. Spending monies. Check them out if you want.</p>
-      </a>
-      <div id='instafeed'></div>
-      <div class='contact clearfix'>
-        <h2 class='header-margin'>Contact Me</h2>
-        <p class='full'>If you'd like to get a hold of me to discuss work opportunities or anything else. Feel free to send me a message.</p>
-        <form action='https://switchflip.wufoo.com/forms/mw1cf720g5zq8q/#public' autocomplete='off' class='wufoo topLabel page' enctype='multipart/form-data' id='form2' method='post' name='form2' novalidate=''>
-          <input class='name' name='Field1' onkeyup='' placeholder='Name' required type='text'>
-          <input class='email' name='Field2' placeholder='Email' required spellcheck='false' type='email'>
-          <textarea class='message' name='Field3' onkeyup='' placeholder='Comments' required spellcheck='true'></textarea>
-          <input class='btTxt submit button' id='saveForm' name='saveForm' type='submit' value='Submit'>
-          <div class='li hide'>
-            <label for='comment'>Do Not Fill This Out</label>
-            <textarea cols='1' id='comment' name='comment' rows='1'></textarea>
-            <input id='idstamp' name='idstamp' type='hidden' value='tT9obkj/pe+WX5AN7s8SpTsBq8FiAJ5EewmZwxdXbcU='>
+<html lang='en'>
+  <head>
+    <meta charset='utf-8'>
+    <meta content='IE=edge,chrome=1' http-equiv='X-UA-Compatible'>
+    <meta content='Thomas Berry, Web Developer, Toronto, Canada' name='description'>
+    <meta content='width=device-width' name='viewport'>
+    <title>Thomas Berry</title>
+    <!-- Le Styles -->
+    <link href='stylesheets/all.css' rel='stylesheet'>
+    <link href='http://fonts.googleapis.com/css?family=Arvo|Cabin|Bree+Serif' rel='stylesheet'>
+  </head>
+  <body>
+    <div class='header'>
+      <nav>
+        <a href='index.html'>
+          <h1>Thomas Berry</h1>
+        </a>
+        <ul>
+          <li>
+            <a class='fade index' href='index.html'>Home</a>
+          </li>
+          <li>
+            <a class='fade code' href='code.html'>Code</a>
+          </li>
+          <li>
+            <a class='fade about' href='about.html'>About Me</a>
+          </li>
+          <li>
+            <a class='fade resume' href='resume.html'>Resume</a>
+          </li>
+        </ul>
+      </nav>
+    </div>
+    <div class='wrap'>
+      <div class='main'>
+        <h2 class='header-margin'>About me</h2>
+        <p class='full'>I am a 29 year old developer from Toronto, Ontario. I am experienced with writing html/haml and css/sass. I have experience applying the latest of css3 and html5 to production sites. Furthermore I have experience writing ruby, javascript/jquery and other javascript frameworks. I also have experience building web application with ruby-on-rails.</p>
+        <p class='full'>Aside from coding I have a masters degree from the University of Toronto in the field of information science and a bachelor of arts degree in history and geography. Before getting into web development professionally, I worked as a public services reference librarian for the Toronto Public Library.</p>
+        <p class='full'>I believe my experience working on the front-line and developing for the Toronto Public Library has allowed for a unique prespective on how to build web applications that users want.</p>
+        <figure>
+          <div class='polaroid'>
+            <img alt='A image of me, Thomas Berry' class='large one-edge-shadow round-all' src='images/thomas-berry-profile.jpg'>
           </div>
-        </form>
+        </figure>
+        <a href='http://www.instagram.com/brofairy'>
+          <h2 class='header-margin'>@brofairy</h2>
+          <p class='full'>I like taking dumb photos on instagram. Using data. Spending monies. Check them out if you want.</p>
+        </a>
+        <div id='instafeed'></div>
+        <div class='contact clearfix'>
+          <h2 class='header-margin'>Contact Me</h2>
+          <p class='full'>If you'd like to get a hold of me to discuss work opportunities or anything else. Feel free to send me a message.</p>
+          <form action='https://switchflip.wufoo.com/forms/mw1cf720g5zq8q/#public' autocomplete='off' class='wufoo topLabel page' enctype='multipart/form-data' id='form2' method='post' name='form2' novalidate=''>
+            <input class='name' name='Field1' onkeyup='' placeholder='Name' required type='text'>
+            <input class='email' name='Field2' placeholder='Email' required spellcheck='false' type='email'>
+            <textarea class='message' name='Field3' onkeyup='' placeholder='Comments' required spellcheck='true'></textarea>
+            <input class='btTxt submit button' id='saveForm' name='saveForm' type='submit' value='Submit'>
+            <div class='li hide'>
+              <label for='comment'>Do Not Fill This Out</label>
+              <textarea cols='1' id='comment' name='comment' rows='1'></textarea>
+              <input id='idstamp' name='idstamp' type='hidden' value='tT9obkj/pe+WX5AN7s8SpTsBq8FiAJ5EewmZwxdXbcU='>
+            </div>
+          </form>
+        </div>
       </div>
     </div>
-  </div>
-  <div class='footer'>
-    <h2>Connect</h2>
-    <ul>
-      <li>
-        <a class='fade' href='mailto:thom.berry@gmail.com'>Email</a>
-      </li>
-      <li>
-        <a class='fade' href='http://www.twitter.com/thomasreidberry'>Twitter</a>
-      </li>
-      <li>
-        <a class='fade' href='http://www.github.com/switchflip'>Github</a>
-      </li>
-      <li>
-        <a class='fade' href='http://www.thomasreidberry.tumblr.com'>Blog</a>
-      </li>
-    </ul>
-  </div>
-  <script rel='text/javascript' src='javascripts/all.js'></script>
-</body>
+    <div class='footer'>
+      <h2>Connect</h2>
+      <ul>
+        <li>
+          <a class='fade' href='mailto:thom.berry@gmail.com'>Email</a>
+        </li>
+        <li>
+          <a class='fade' href='http://www.twitter.com/thomasreidberry'>Twitter</a>
+        </li>
+        <li>
+          <a class='fade' href='http://www.github.com/switchflip'>Github</a>
+        </li>
+        <li>
+          <a class='fade' href='http://www.thomasreidberry.tumblr.com'>Blog</a>
+        </li>
+      </ul>
+    </div>
+    <script rel='text/javascript' src='javascripts/all.js'></script>
+  </body>
+</html>
