--- a/code.html
+++ b/code.html
@@ -3,88 +3,90 @@
 <!--[if IE 7]> <html class="no-js lt-ie9 lt-ie8" lang="en"> <![endif]-->
 <!--[if IE 8]> <html class="no-js lt-ie9" lang="en"> <![endif]-->
 <!--[if gt IE 8]> <html class="no-js" lang="en"> <![endif]-->
-<head>
-  <meta charset='utf-8'>
-  <meta content='IE=edge,chrome=1' http-equiv='X-UA-Compatible'>
-  <meta content='Thomas Berry, Web Developer, Toronto, Canada' name='description'>
-  <meta content='width=device-width' name='viewport'>
-  <title>Thomas Berry</title>
-  <!-- Le Styles -->
-  <link href='stylesheets/all.css' rel='stylesheet'>
-  <link href='http://fonts.googleapis.com/css?family=Arvo|Cabin|Bree+Serif' rel='stylesheet'>
-</head>
-<body>
-  <div class='header'>
-    <nav>
-      <a href='index.html'>
-        <h1>Thomas Berry</h1>
-      </a>
-      <ul>
-        <li>
-          <a class='fade index' href='index.html'>Home</a>
-        </li>
-        <li>
-          <a class='fade code' href='code.html'>Code</a>
-        </li>
-        <li>
-          <a class='fade about' href='about.html'>About Me</a>
-        </li>
-        <li>
-          <a class='fade resume' href='resume.html'>Resume</a>
-        </li>
-      </ul>
-    </nav>
-  </div>
-  <div class='wrap'>
-    <div class='main'>
-      <div class='full'>
-        <h2 class='header-margin'>Code</h2>
-        <p class='full'>
-          Most of the work I do is front-end web developer in my current job as a developer for the Toronto Public Library. But, I hope to transition to a full stack developer in the near future.
-        </p>
-      </div>
-      <div class='row'>
-        <div class='two'>
-          <img alt='Ruby on Rails icon' class='center-img' src='images/icons/rocket.png'>
-          <h3>Ruby on Rails</h3>
-          <p>In the spring of 2012 after coding for a few years I decided it was time to get serious and I began a 3 month intensive bootcamp focused on programming in ruby and ruby-on-rails. It was one of the most intense experiences of my life, but I am forever thankful I attended.</p>
+<html lang='en'>
+  <head>
+    <meta charset='utf-8'>
+    <meta content='IE=edge,chrome=1' http-equiv='X-UA-Compatible'>
+    <meta content='Thomas Berry, Web Developer, Toronto, Canada' name='description'>
+    <meta content='width=device-width' name='viewport'>
+    <title>Thomas Berry</title>
+    <!-- Le Styles -->
+    <link href='stylesheets/all.css' rel='stylesheet'>
+    <link href='http://fonts.googleapis.com/css?family=Arvo|Cabin|Bree+Serif' rel='stylesheet'>
+  </head>
+  <body>
+    <div class='header'>
+      <nav>
+        <a href='index.html'>
+          <h1>Thomas Berry</h1>
+        </a>
+        <ul>
+          <li>
+            <a class='fade index' href='index.html'>Home</a>
+          </li>
+          <li>
+            <a class='fade code' href='code.html'>Code</a>
+          </li>
+          <li>
+            <a class='fade about' href='about.html'>About Me</a>
+          </li>
+          <li>
+            <a class='fade resume' href='resume.html'>Resume</a>
+          </li>
+        </ul>
+      </nav>
+    </div>
+    <div class='wrap'>
+      <div class='main'>
+        <div class='full'>
+          <h2 class='header-margin'>Code</h2>
+          <p class='full'>
+            Most of the work I do is front-end web developer in my current job as a developer for the Toronto Public Library. But, I hope to transition to a full stack developer in the near future.
+          </p>
         </div>
-        <div class='two'>
-          <img alt='Javascript icon' class='center-img' src='images/icons/magicwand.png'>
-          <h3>Javascript/Jquery</h3>
-          <p>Personally I believe the future of the web (for now anyways) is javascript. I could go on with reasons as to why, but in the last few months I have joined a nerdy code club with some other developers in Toronto with the sole purpose of mastering the infamous javascript(s).</p>
+        <div class='row'>
+          <div class='two'>
+            <img alt='Ruby on Rails icon' class='center-img' src='images/icons/rocket.png'>
+            <h3>Ruby on Rails</h3>
+            <p>In the spring of 2012 after coding for a few years I decided it was time to get serious and I began a 3 month intensive bootcamp focused on programming in ruby and ruby-on-rails. It was one of the most intense experiences of my life, but I am forever thankful I attended.</p>
+          </div>
+          <div class='two'>
+            <img alt='Javascript icon' class='center-img' src='images/icons/magicwand.png'>
+            <h3>Javascript/Jquery</h3>
+            <p>Personally I believe the future of the web (for now anyways) is javascript. I could go on with reasons as to why, but in the last few months I have joined a nerdy code club with some other developers in Toronto with the sole purpose of mastering the infamous javascript(s).</p>
+          </div>
         </div>
-      </div>
-      <div class='row'>
-        <div class='two'>
-          <img alt='Haml/HTML icon' class='center-img' src='images/icons/dev.png'>
-          <h3>Haml/Sass</h3>
-          <p>For 3 years I've been writing html and more recently I've started building almost everything with haml (Yeah Haml!). Also, I am extremely skilled and efficient writing CSS and Sass (I prefer Sass for it's organization and breivity).</p>
-        </div>
-        <div class='two'>
-          <img alt='Ectera icon' class='center-img' src='images/icons/browser.png'>
-          <h3>Etc...</h3>
-          <p>As far as version control goes profesionally I use SVN, but for my own personal projects I rely on git/github. I am speedy in the terminal and have an understanding of MySql and the thoery of relational databases.</p>
+        <div class='row'>
+          <div class='two'>
+            <img alt='Haml/HTML icon' class='center-img' src='images/icons/dev.png'>
+            <h3>Haml/Sass</h3>
+            <p>For 3 years I've been writing html and more recently I've started building almost everything with haml (Yeah Haml!). Also, I am extremely skilled and efficient writing CSS and Sass (I prefer Sass for it's organization and breivity).</p>
+          </div>
+          <div class='two'>
+            <img alt='Ectera icon' class='center-img' src='images/icons/browser.png'>
+            <h3>Etc...</h3>
+            <p>As far as version control goes profesionally I use SVN, but for my own personal projects I rely on git/github. I am speedy in the terminal and have an understanding of MySql and the thoery of relational databases.</p>
+          </div>
         </div>
       </div>
     </div>
-  </div>
-  <div class='footer'>
-    <h2>Connect</h2>
-    <ul>
-      <li>
-        <a class='fade' href='mailto:thom.berry@gmail.com'>Email</a>
-      </li>
-      <li>
-        <a class='fade' href='http://www.twitter.com/thomasreidberry'>Twitter</a>
-      </li>
-      <li>
-        <a class='fade' href='http://www.github.com/switchflip'>Github</a>
-      </li>
-      <li>
-        <a class='fade' href='http://www.thomasreidberry.tumblr.com'>Blog</a>
-      </li>
-    </ul>
-  </div>
-  <script rel='text/javascript' src='javascripts/all.js'></script>
-</body>
+    <div class='footer'>
+      <h2>Connect</h2>
+      <ul>
+        <li>
+          <a class='fade' href='mailto:thom.berry@gmail.com'>Email</a>
+        </li>
+        <li>
+          <a class='fade' href='http://www.twitter.com/thomasreidberry'>Twitter</a>
+        </li>
+        <li>
+          <a class='fade' href='http://www.github.com/switchflip'>Github</a>
+        </li>
+        <li>
+          <a class='fade' href='http://www.thomasreidberry.tumblr.com'>Blog</a>
+        </li>
+      </ul>
+    </div>
+    <script rel='text/javascript' src='javascripts/all.js'></script>
+  </body>
+</html>
