--- a/index.html
+++ b/index.html
@@ -3,96 +3,98 @@
 <!--[if IE 7]> <html class="no-js lt-ie9 lt-ie8" lang="en"> <![endif]-->
 <!--[if IE 8]> <html class="no-js lt-ie9" lang="en"> <![endif]-->
 <!--[if gt IE 8]> <html class="no-js" lang="en"> <![endif]-->
-<head>
-  <meta charset='utf-8'>
-  <meta content='IE=edge,chrome=1' http-equiv='X-UA-Compatible'>
-  <meta content='Thomas Berry, Web Developer, Toronto, Canada' name='description'>
-  <meta content='width=device-width' name='viewport'>
-  <title>Thomas Berry</title>
-  <!-- Le Styles -->
-  <link href='stylesheets/all.css' rel='stylesheet'>
-  <link href='http://fonts.googleapis.com/css?family=Arvo|Cabin|Bree+Serif' rel='stylesheet'>
-</head>
-<body>
-  <div class='header'>
-    <nav>
-      <a href='index.html'>
-        <h1>Thomas Berry</h1>
-      </a>
-      <ul>
-        <li>
-          <a class='fade index' href='index.html'>Home</a>
-        </li>
-        <li>
-          <a class='fade code' href='code.html'>Code</a>
-        </li>
-        <li>
-          <a class='fade about' href='about.html'>About Me</a>
-        </li>
-        <li>
-          <a class='fade resume' href='resume.html'>Resume</a>
-        </li>
-      </ul>
-    </nav>
-  </div>
-  <div class='wrap'>
-    <div class='main'>
-      <div class='row'>
-        <div class='third'>
-          <a href='code.html'>
-            <div class='icon-container'>
-              <img src='images/work.png'>
-            </div>
-          </a>
-          <a href='code.html'>
-            <h2>Work</h2>
-          </a>
-          <p>Hi there! I'm Thomas Berry a web developer currently living in Toronto, Canada and developing for the Toronto Public Library. I am currently working on moving our current site to a mobile first site.</p>
-          <p>In my spare time I like learning. I spend most of my time learning how to make amazing repsonsive sites, writing javascript and building web apps in the ruby-on-rails framework.</p>
-        </div>
-        <div class='third'>
-          <a href='code.html'>
-            <div class='icon-container'>
-              <img alt='code icon' src='images/code.png'>
-            </div>
-          </a>
-          <a href='code.html'>
-            <h2>Code</h2>
-          </a>
-          <p>When writing coding I believe in two principles, which are D.R.Y (Don't repeat yourself) and the importance of writing human readable code. Because, if a human can't read it then what it the point?</p>
-          <p>Currneltly I specialzie in html, css/sass, javascript/jquery, ruby and ruby on rails. But, I am constantly striving to learn new tools and frameworks.</p>
-        </div>
-        <div class='third'>
-          <a href='about.html'>
-            <div class='icon-container'>
-              <img src='images/activities.png'>
-            </div>
-          </a>
-          <a href='about.html'>
-            <h2>About Me</h2>
-          </a>
-          <p>In my spare time when I am not writing code and picking on new prorgamming langauges I engage in many outdoor hobbies. Primarly I love to skateboard - not to be confused with longboards. I've been do that for about 20 years.</p>
-          <p>And recently within the last few years I have developed a passion of the gym - especially in the cold months. And in the summer I love a good outback canoe trip to Algonquin Park.</p>
+<html lang='en'>
+  <head>
+    <meta charset='utf-8'>
+    <meta content='IE=edge,chrome=1' http-equiv='X-UA-Compatible'>
+    <meta content='Thomas Berry, Web Developer, Toronto, Canada' name='description'>
+    <meta content='width=device-width' name='viewport'>
+    <title>Thomas Berry</title>
+    <!-- Le Styles -->
+    <link href='stylesheets/all.css' rel='stylesheet'>
+    <link href='http://fonts.googleapis.com/css?family=Arvo|Cabin|Bree+Serif' rel='stylesheet'>
+  </head>
+  <body>
+    <div class='header'>
+      <nav>
+        <a href='index.html'>
+          <h1>Thomas Berry</h1>
+        </a>
+        <ul>
+          <li>
+            <a class='fade index' href='index.html'>Home</a>
+          </li>
+          <li>
+            <a class='fade code' href='code.html'>Code</a>
+          </li>
+          <li>
+            <a class='fade about' href='about.html'>About Me</a>
+          </li>
+          <li>
+            <a class='fade resume' href='resume.html'>Resume</a>
+          </li>
+        </ul>
+      </nav>
+    </div>
+    <div class='wrap'>
+      <div class='main'>
+        <div class='row'>
+          <div class='third'>
+            <a href='code.html'>
+              <div class='icon-container'>
+                <img src='images/work.png'>
+              </div>
+            </a>
+            <a href='code.html'>
+              <h2>Work</h2>
+            </a>
+            <p>Hi there! I'm Thomas Berry a web developer currently living in Toronto, Canada and developing for the Toronto Public Library. I am currently working on moving our current site to a mobile first site.</p>
+            <p>In my spare time I like learning. I spend most of my time learning how to make amazing repsonsive sites, writing javascript and building web apps in the ruby-on-rails framework.</p>
+          </div>
+          <div class='third'>
+            <a href='code.html'>
+              <div class='icon-container'>
+                <img alt='code icon' src='images/code.png'>
+              </div>
+            </a>
+            <a href='code.html'>
+              <h2>Code</h2>
+            </a>
+            <p>When writing coding I believe in two principles, which are D.R.Y (Don't repeat yourself) and the importance of writing human readable code. Because, if a human can't read it then what it the point?</p>
+            <p>Currneltly I specialzie in html, css/sass, javascript/jquery, ruby and ruby on rails. But, I am constantly striving to learn new tools and frameworks.</p>
+          </div>
+          <div class='third'>
+            <a href='about.html'>
+              <div class='icon-container'>
+                <img src='images/activities.png'>
+              </div>
+            </a>
+            <a href='about.html'>
+              <h2>About Me</h2>
+            </a>
+            <p>In my spare time when I am not writing code and picking on new prorgamming langauges I engage in many outdoor hobbies. Primarly I love to skateboard - not to be confused with longboards. I've been do that for about 20 years.</p>
+            <p>And recently within the last few years I have developed a passion of the gym - especially in the cold months. And in the summer I love a good outback canoe trip to Algonquin Park.</p>
+          </div>
         </div>
       </div>
     </div>
-  </div>
-  <div class='footer'>
-    <h2>Connect</h2>
-    <ul>
-      <li>
-        <a class='fade' href='mailto:thom.berry@gmail.com'>Email</a>
-      </li>
-      <li>
-        <a class='fade' href='http://www.twitter.com/thomasreidberry'>Twitter</a>
-      </li>
-      <li>
-        <a class='fade' href='http://www.github.com/switchflip'>Github</a>
-      </li>
-      <li>
-        <a class='fade' href='http://www.thomasreidberry.tumblr.com'>Blog</a>
-      </li>
-    </ul>
-  </div>
-  <script rel='text/javascript' src='javascripts/all.js'></script>
-</body>
+    <div class='footer'>
+      <h2>Connect</h2>
+      <ul>
+        <li>
+          <a class='fade' href='mailto:thom.berry@gmail.com'>Email</a>
+        </li>
+        <li>
+          <a class='fade' href='http://www.twitter.com/thomasreidberry'>Twitter</a>
+        </li>
+        <li>
+          <a class='fade' href='http://www.github.com/switchflip'>Github</a>
+        </li>
+        <li>
+          <a class='fade' href='http://www.thomasreidberry.tumblr.com'>Blog</a>
+        </li>
+      </ul>
+    </div>
+    <script rel='text/javascript' src='javascripts/all.js'></script>
+  </body>
+</html>
