--- a/resume.html
+++ b/resume.html
@@ -3,114 +3,129 @@
 <!--[if IE 7]> <html class="no-js lt-ie9 lt-ie8" lang="en"> <![endif]-->
 <!--[if IE 8]> <html class="no-js lt-ie9" lang="en"> <![endif]-->
 <!--[if gt IE 8]> <html class="no-js" lang="en"> <![endif]-->
-<head>
-  <meta charset='utf-8'>
-  <meta content='IE=edge,chrome=1' http-equiv='X-UA-Compatible'>
-  <meta content='Thomas Berry, Web Developer, Toronto, Canada' name='description'>
-  <meta content='width=device-width' name='viewport'>
-  <title>Thomas Berry</title>
-  <!-- Le Styles -->
-  <link href='stylesheets/all.css' rel='stylesheet'>
-  <link href='http://fonts.googleapis.com/css?family=Arvo|Cabin|Bree+Serif' rel='stylesheet'>
-</head>
-<body>
-  <div class='header'>
-    <nav>
-      <a href='index.html'>
-        <h1>Thomas Berry</h1>
-      </a>
-      <ul>
-        <li>
-          <a class='fade index' href='index.html'>Home</a>
-        </li>
-        <li>
-          <a class='fade code' href='code.html'>Code</a>
-        </li>
-        <li>
-          <a class='fade about' href='about.html'>About Me</a>
-        </li>
-        <li>
-          <a class='fade resume' href='resume.html'>Resume</a>
-        </li>
-      </ul>
-    </nav>
-  </div>
-  <div class='wrap'>
-    <div class='main'>
-      <div class='resume'>
-        <div class='row'>
-          <div class='left'>
-            <h2>Professional Profile</h2>
+<html lang='en'>
+  <head>
+    <meta charset='utf-8'>
+    <meta content='IE=edge,chrome=1' http-equiv='X-UA-Compatible'>
+    <meta content='Thomas Berry, Web Developer, Toronto, Canada' name='description'>
+    <meta content='width=device-width' name='viewport'>
+    <title>Thomas Berry</title>
+    <!-- Le Styles -->
+    <link href='stylesheets/all.css' rel='stylesheet'>
+    <link href='http://fonts.googleapis.com/css?family=Arvo|Cabin|Bree+Serif' rel='stylesheet'>
+  </head>
+  <body>
+    <div class='header'>
+      <nav>
+        <a href='index.html'>
+          <h1>Thomas Berry</h1>
+        </a>
+        <ul>
+          <li>
+            <a class='fade index' href='index.html'>Home</a>
+          </li>
+          <li>
+            <a class='fade code' href='code.html'>Code</a>
+          </li>
+          <li>
+            <a class='fade about' href='about.html'>About Me</a>
+          </li>
+          <li>
+            <a class='fade resume' href='resume.html'>Resume</a>
+          </li>
+        </ul>
+      </nav>
+    </div>
+    <div class='wrap'>
+      <div class='main'>
+        <div class='resume'>
+          <div class='row'>
+            <figure>
+              <img alt='a small profile picture of Thomas Berry' class='resume-pic' src='images/profile-pic-small.jpg'>
+            </figure>
+            <div class='right'>
+              <h2>Web Developer &amp; Librarian</h2>
+            </div>
           </div>
-          <div class='right'>
-            <p>Currently I work as a web developer and librarian for the Toronto Public Library. I get to practice a wide array of skills - from writing code, mark-up to interperting library policies and creating digitals tools and services to help Torontonians find the information they need. Very rarely do I touch books.</p>
+          <div class='row'>
+            <div class='left'>
+              <h2>Professional Profile</h2>
+            </div>
+            <div class='right'>
+              <p>Currently I work as a web developer and librarian for the Toronto Public Library. I get to practice a wide array of skills - from writing code, mark-up to interperting library policies and creating digitals tools and services to help Torontonians find the information they need. Very rarely do I touch books.</p>
+            </div>
           </div>
-        </div>
-        <div class='row'>
-          <div class='left'>
-            <h2>Experience</h2>
+          <div class='row'>
+            <div class='left'>
+              <h2>Experience</h2>
+            </div>
+            <div class='right'>
+              <h3>Web Developer &amp; Librarian, 2013 - Present</h3>
+              <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Suscipit, nam, vero, eius doloremque iure quo commodi deleniti saepe facere soluta aspernatur laboriosam ducimus nemo explicabo illum eum aperiam optio consequuntur?</p>
+              <h3>Intern Web Developer, 2013</h3>
+              <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Voluptas, cumque, laborum obcaecati quod molestiae provident minus hic cum laudantium in perferendis vero blanditiis esse impedit soluta ut odit asperiores adipisci</p>
+              <h3>Librarian, 2010 - 2012</h3>
+              <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Minima, maxime, modi optio debitis veritatis perferendis voluptas sint adipisci nihil assumenda voluptate illum! Tempora, natus veritatis repellendus necessitatibus voluptate qui quisquam!</p>
+              <h3>User Support Specialist, 2008 - 2010</h3>
+              <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Possimus repudiandae natus beatae cum eaque. Odit, placeat, ut eveniet laboriosam natus sed quis maxime veniam unde neque dolorem vero asperiores tempora.</p>
+            </div>
           </div>
-          <div class='right'>
-            <p></p>
+          <div class='row'>
+            <div class='left'>
+              <h2>Technical Skills</h2>
+            </div>
+            <div class='right'>
+              <h3>Haml/Html</h3>
+              <p>I am a strong believer in the DRY (do not repeat yourself) principle and that is why I am a lover of Haml - not to mention its homegrown.</p>
+              <h3>CSS/Sass/Less</h3>
+              <p>Fluent in css and sass (prefer the later).</p>
+              <h3>JavaScript/Jquery</h3>
+              <p>3 years of experience writing vanialla javascript and jquery. Some experience using jquery ajax and interacting with a server. Have played with and am interesting in learning more about ember.js and angular.js</p>
+              <h3>Ruby/Ruby-on-Rails</h3>
+              <p>Knowledge of building rails apps from the ground up, using gems, writing tests within the agile process</p>
+              <h3>Version Control</h3>
+              <p>Perfer to use git/github, but professional I am comfortable using SVN and tortoise.</p>
+            </div>
           </div>
-        </div>
-        <div class='row'>
-          <div class='left'>
-            <h2>Technical Skills</h2>
-          </div>
-          <div class='right'>
-            <p></p>
-          </div>
-        </div>
-        <div class='row'>
-          <div class='left'>
-            <h2>Education</h2>
-          </div>
-          <div class='right'>
-            <p></p>
+          <div class='row'>
+            <div class='left'>
+              <h2>Education</h2>
+            </div>
+            <div class='right'>
+              <p>
+                <strong>HackerYou - Responsive Web Development</strong>
+              </p>
+              <p>
+                <strong>Bitmaker Labs - Ruby-on-Rails Bootcamp</strong>
+              </p>
+              <p>
+                <strong>Master of Information Studies</strong>
+              </p>
+              <p>
+                <strong>Honours Bachelors of Arts in History and Geography</strong>
+              </p>
+            </div>
           </div>
         </div>
       </div>
-      <!-- %p.full Currently I work as a web developer and librarian for the Toronto Public Library. I get to practice a wide array of skills - from writing code, mark-up to interperting library policies and creating digitals tools and services to help Torontonians find the information they need. Very rarely do I touch books. -->
-      <!-- %h2.header-margin Experience -->
-      <!-- %ul.no-bullet -->
-      <!-- %li Web Developer &amp; Librarian, Toronto Public Library -->
-      <!-- %ul.no-bullet -->
-      <!-- %li Work with html5, css3, javascript, ruby, ruby-on-rails and java to maintain and develop new features and applications. -->
-      <!-- %li Strategically plan and interpert library policy in order to provice information and services to the public at large -->
-      <!-- %li Maintain current up-to-date knowledge on topics related to librarianship and web development - including accessibility -->
-      <!-- %h2.header-margin Eductaion -->
-      <!-- %ul.no-bullet -->
-      <!-- %li HackerYou, 2013 -->
-      <!-- %ul.no-bullet -->
-      <!-- %li Learned how to build responsive website using the latest css3 -->
-      <!-- %li Bitmaker Labs, 2013 -->
-      <!-- %ul.no-bullet -->
-      <!-- %li For 9 weeks at 60 hours a week, I devoted myself to learning the ins-and-outs of ruby and ruby-on-rails. Also spent time improving my javascript/coffeescript/jquery skills as well other fundamentals of web development. -->
-      <!-- %li Master of Library and Information Science, University of Toronto, 2010 -->
-      <!-- %ul.no-bullet -->
-      <!-- %li Spent two years thinking critically (and writing lots of papers) about the social and political implications of information and information management. Also, practiced learning the fundamentals of librarianship - freedom of information for all. -->
-      <!-- %li Honours Bachelor of Arts in History and Geography, Brock University, 2008 -->
-      <!-- %ul.no-bullet -->
-      <!-- %li Specialized in American and Canadian history as well as a healthy interest in human and social geographies of public spaces in North America. -->
     </div>
-  </div>
-  <div class='footer'>
-    <h2>Connect</h2>
-    <ul>
-      <li>
-        <a class='fade' href='mailto:thom.berry@gmail.com'>Email</a>
-      </li>
-      <li>
-        <a class='fade' href='http://www.twitter.com/thomasreidberry'>Twitter</a>
-      </li>
-      <li>
-        <a class='fade' href='http://www.github.com/switchflip'>Github</a>
-      </li>
-      <li>
-        <a class='fade' href='http://www.thomasreidberry.tumblr.com'>Blog</a>
-      </li>
-    </ul>
-  </div>
-  <script rel='text/javascript' src='javascripts/all.js'></script>
-</body>
+    <div class='footer'>
+      <h2>Connect</h2>
+      <ul>
+        <li>
+          <a class='fade' href='mailto:thom.berry@gmail.com'>Email</a>
+        </li>
+        <li>
+          <a class='fade' href='http://www.twitter.com/thomasreidberry'>Twitter</a>
+        </li>
+        <li>
+          <a class='fade' href='http://www.github.com/switchflip'>Github</a>
+        </li>
+        <li>
+          <a class='fade' href='http://www.thomasreidberry.tumblr.com'>Blog</a>
+        </li>
+      </ul>
+    </div>
+    <script rel='text/javascript' src='javascripts/all.js'></script>
+  </body>
+</html>
