--- a/about.html
+++ b/about.html
@@ -7,7 +7,7 @@
   <head>
     <meta charset='utf-8'>
     <meta content='IE=edge,chrome=1' http-equiv='X-UA-Compatible'>
-    <meta content='Thomas Berry, Web Developer, Toronto, Canada' name='description'>
+    <meta content='Thomas Berry, Web Developer, Librarian, Toronto, Canada' name='description'>
     <meta content='width=device-width' name='viewport'>
     <title>Thomas Berry</title>
     <!-- Le Styles -->
@@ -41,7 +41,7 @@
         <h2 class='header-margin'>About me</h2>
         <p class='full'>I am a 29 year old developer from Toronto, Ontario. I am experienced with writing html/haml and css/sass. I have experience applying the latest of css3 and html5 to production sites. Furthermore I have experience writing ruby, javascript/jquery and other javascript frameworks. I also have experience building web application with ruby-on-rails.</p>
         <p class='full'>Aside from coding I have a masters degree from the University of Toronto in the field of information science and a bachelor of arts degree in history and geography. Before getting into web development professionally, I worked as a public services reference librarian for the Toronto Public Library.</p>
-        <p class='full'>I believe my experience working on the front-line and developing for the Toronto Public Library has allowed for a unique prespective on how to build web applications that users want.</p>
+        <p class='full'>I believe my experience working on the front-line and as well as developing for the Toronto Public Library has allowed for a unique understanding and prespective on library service in Toronto and the world at large.</p>
         <figure>
           <div class='polaroid'>
             <img alt='A image of me, Thomas Berry' class='large one-edge-shadow round-all' src='images/thomas-berry-profile.jpg'>
