--- a/code.html
+++ b/code.html
@@ -7,7 +7,7 @@
   <head>
     <meta charset='utf-8'>
     <meta content='IE=edge,chrome=1' http-equiv='X-UA-Compatible'>
-    <meta content='Thomas Berry, Web Developer, Toronto, Canada' name='description'>
+    <meta content='Thomas Berry, Web Developer, Librarian, Toronto, Canada' name='description'>
     <meta content='width=device-width' name='viewport'>
     <title>Thomas Berry</title>
     <!-- Le Styles -->
@@ -41,14 +41,14 @@
         <div class='full'>
           <h2 class='header-margin'>Code</h2>
           <p class='full'>
-            Most of the work I do is front-end web developer in my current job as a developer for the Toronto Public Library. But, I hope to transition to a full stack developer in the near future.
+            Mostly I work on the front-end  in my current job as a developer for the Toronto Public Library. But, I increasinyly I am gaining knowledge of the full stack.
           </p>
         </div>
         <div class='row'>
           <div class='two'>
             <img alt='Ruby on Rails icon' class='center-img' src='images/icons/rocket.png'>
             <h3>Ruby on Rails</h3>
-            <p>In the spring of 2012 after coding for a few years I decided it was time to get serious and I began a 3 month intensive bootcamp focused on programming in ruby and ruby-on-rails. It was one of the most intense experiences of my life, but I am forever thankful I attended.</p>
+            <p>In the spring of 2013 after coding for a few years I decided it was time to get serious with ruby and I began  a 3 month intensive bootcamp focused on programming in ruby and ruby-on-rails. It was one of the most intense experiences of my life, but I am forever thankful I attended.</p>
           </div>
           <div class='two'>
             <img alt='Javascript icon' class='center-img' src='images/icons/magicwand.png'>
