--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
   <head>
     <meta charset='utf-8'>
     <meta content='IE=edge,chrome=1' http-equiv='X-UA-Compatible'>
-    <meta content='Thomas Berry, Web Developer, Toronto, Canada' name='description'>
+    <meta content='Thomas Berry, Web Developer, Librarian, Toronto, Canada' name='description'>
     <meta content='width=device-width' name='viewport'>
     <title>Thomas Berry</title>
     <!-- Le Styles -->
@@ -49,7 +49,6 @@
               <h2>Work</h2>
             </a>
             <p>Hi there! I'm Thomas Berry a web developer currently living in Toronto, Canada and developing for the Toronto Public Library. I am currently working on moving our current site to a mobile first site.</p>
-            <p>In my spare time I like learning. I spend most of my time learning how to make amazing repsonsive sites, writing javascript and building web apps in the ruby-on-rails framework.</p>
           </div>
           <div class='third'>
             <a href='code.html'>
@@ -60,7 +59,6 @@
             <a href='code.html'>
               <h2>Code</h2>
             </a>
-            <p>When writing coding I believe in two principles, which are D.R.Y (Don't repeat yourself) and the importance of writing human readable code. Because, if a human can't read it then what it the point?</p>
             <p>Currneltly I specialzie in html, css/sass, javascript/jquery, ruby and ruby on rails. But, I am constantly striving to learn new tools and frameworks.</p>
           </div>
           <div class='third'>
@@ -72,8 +70,7 @@
             <a href='about.html'>
               <h2>About Me</h2>
             </a>
-            <p>In my spare time when I am not writing code and picking on new prorgamming langauges I engage in many outdoor hobbies. Primarly I love to skateboard - not to be confused with longboards. I've been do that for about 20 years.</p>
-            <p>And recently within the last few years I have developed a passion of the gym - especially in the cold months. And in the summer I love a good outback canoe trip to Algonquin Park.</p>
+            <p>In my spare time when I am not writing code and picking on new prorgamming langauges I engage in many outdoor hobbies. Primarly I love to skateboard - not to be confused with longboards. I've been do that for about 20 years</p>
           </div>
         </div>
       </div>
