--- a/resume.html
+++ b/resume.html
@@ -7,7 +7,7 @@
   <head>
     <meta charset='utf-8'>
     <meta content='IE=edge,chrome=1' http-equiv='X-UA-Compatible'>
-    <meta content='Thomas Berry, Web Developer, Toronto, Canada' name='description'>
+    <meta content='Thomas Berry, Web Developer, Librarian, Toronto, Canada' name='description'>
     <meta content='width=device-width' name='viewport'>
     <title>Thomas Berry</title>
     <!-- Le Styles -->
@@ -43,9 +43,6 @@
             <figure>
               <img alt='a small profile picture of Thomas Berry' class='resume-pic' src='images/profile-pic-small.jpg'>
             </figure>
-            <div class='right'>
-              <h2>Web Developer &amp; Librarian</h2>
-            </div>
           </div>
           <div class='row'>
             <div class='left'>
@@ -61,9 +58,9 @@
             </div>
             <div class='right'>
               <h3>Web Developer &amp; Librarian, 2013 - Present</h3>
-              <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Suscipit, nam, vero, eius doloremque iure quo commodi deleniti saepe facere soluta aspernatur laboriosam ducimus nemo explicabo illum eum aperiam optio consequuntur?</p>
+              <p>Wear a great deal of hats in this role. Mostly I write code. But, I also help in the strategic planning of services and interperting policy and applying it to the library site and services.</p>
               <h3>Intern Web Developer, 2013</h3>
-              <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Voluptas, cumque, laborum obcaecati quod molestiae provident minus hic cum laudantium in perferendis vero blanditiis esse impedit soluta ut odit asperiores adipisci</p>
+              <p>For two great and intense months I interned at one of Toronto's most premier web development shops - The Working Group. I learnt a great deal about coding, but also about efficieny and process in web development. Thanks guys!</p>
               <h3>Librarian, 2010 - 2012</h3>
               <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Minima, maxime, modi optio debitis veritatis perferendis voluptas sint adipisci nihil assumenda voluptate illum! Tempora, natus veritatis repellendus necessitatibus voluptate qui quisquam!</p>
               <h3>User Support Specialist, 2008 - 2010</h3>
@@ -72,7 +69,7 @@
           </div>
           <div class='row'>
             <div class='left'>
-              <h2>Technical Skills</h2>
+              <h2>Tech Skills</h2>
             </div>
             <div class='right'>
               <h3>Haml/Html</h3>
@@ -93,16 +90,16 @@
             </div>
             <div class='right'>
               <p>
-                <strong>HackerYou - Responsive Web Development</strong>
+                HackerYou - Responsive Web Development, 2013
               </p>
               <p>
-                <strong>Bitmaker Labs - Ruby-on-Rails Bootcamp</strong>
+                Bitmaker Labs - Ruby-on-Rails Bootcamp, 2013
               </p>
               <p>
-                <strong>Master of Information Studies</strong>
+                Master of Information Studies, 2010
               </p>
               <p>
-                <strong>Honours Bachelors of Arts in History and Geography</strong>
+                Honours Bachelors of Arts in History and Geography, 2008
               </p>
             </div>
           </div>
