More content changes

--- a/resume.html
+++ b/resume.html
@@ -89,17 +89,19 @@
               <h2>Education</h2>
             </div>
             <div class='right'>
+              <h3>Web Development</h3>
               <p>
-                HackerYou - Responsive Web Development, 2013
+                HackerYou, Responsive Web Development, 2013
               </p>
               <p>
-                Bitmaker Labs - Ruby-on-Rails Bootcamp, 2013
+                Bitmaker Labs, Ruby-on-Rails Bootcamp, 2013
+              </p>
+              <h3>Undergrad & Graduate</h3>
+              <p>
+                University of Toronto, Master of Information Studies, 2010
               </p>
               <p>
-                Master of Information Studies, 2010
-              </p>
-              <p>
-                Honours Bachelors of Arts in History and Geography, 2008
+                Brock University, Honours Bachelors of Arts in History and Geography, 2008
               </p>
             </div>
           </div>
